--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "cloudinary": "^1.34.0",
     "dev-tools": "^0.1.6",
     "firebase": "^8.10.1",
+    "leaflet": "^1.9.3",
     "less": "^4.1.3",
     "md5": "^2.3.0",
     "mercadopago": "^1.5.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
