--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.1",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -26,10 +27,10 @@
     "sequelize": "^6.29.0"
   },
   "devDependencies": {
-    "supertest-session": "^4.1.0",
-    "mocha": "^10.2.0",
     "chai": "^4.2.0",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.6",
-    "supertest": "^6.0.1"
+    "supertest": "^6.0.1",
+    "supertest-session": "^4.1.0"
   }
 }
